ACLOCAL_AMFLAGS = -I m4
AM_CPPFLAGS = -I$(top_srcdir)/src

lib_LTLIBRARIES = libalvar.la
libalvar_la_SOURCES = \
	src/Alvar.cpp \
	src/Bitset.cpp \
	src/Camera.cpp \
	src/ConnectedComponents.cpp \
	src/Draw.cpp \
	src/EC.cpp \
	src/FernImageDetector.cpp \
	src/FernPoseEstimator.cpp \
	src/FileFormatUtils.cpp \
	src/Filter.cpp \
	src/IntegralImage.cpp \
	src/Kalman.cpp \
	src/Line.cpp \
	src/Marker.cpp \
	src/MarkerDetector.cpp \
	src/MultiMarker.cpp \
	src/MultiMarkerBundle.cpp \
	src/MultiMarkerFiltered.cpp \
	src/MultiMarkerInitializer.cpp \
	src/Optimization.cpp \
	src/Pose.cpp \
	src/Ransac.cpp \
	src/Rotation.cpp \
	src/SfM.cpp \
	src/TrackerFeatures.cpp \
	src/TrackerOrientation.cpp \
	src/TrackerPsa.cpp \
	src/TrackerStat.cpp \
	src/TrifocalTensor.cpp \
	src/UnscentedKalman.cpp \
	src/Util.cpp

pkginclude_HEADERS =  \
	src/AlvarException.h \
	src/Bitset.h \
	src/Camera.h \
	src/ConnectedComponents.h \
	src/Container3d.h \
	src/Draw.h \
	src/EC.h \
	src/FernImageDetector.h \
	src/FernPoseEstimator.h \
	src/FileFormat.h \
	src/FileFormatUtils.h \
	src/Filter.h \
	src/IntegralImage.h \
	src/Kalman.h \
	src/Line.h \
	src/MarkerDetector.h \
	src/Marker.h \
	src/MultiMarkerBundle.h \
	src/MultiMarkerFiltered.h \
	src/MultiMarker.h \
	src/MultiMarkerInitializer.h \
	src/Optimization.h \
	src/Pose.h \
	src/Ransac.h \
	src/Rotation.h \
	src/SfM.h \
	src/TrackerFeatures.h \
	src/Tracker.h \
	src/TrackerOrientation.h \
	src/TrackerPsa.h \
	src/TrackerStat.h \
	src/TrifocalTensor.h \
	src/UnscentedKalman.h \
	src/Util.h
